--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-psycopg2-binary==2.9.7
+# psycopg2-binary==2.9.7
 pandas==2.0.3
 numpy==1.24.3
 Faker==19.3.0
@@ -7,3 +7,4 @@ python-dotenv==1.0.0
 streamlit==1.28.1
 plotly==5.17.0
 python-dateutil==2.8.2
+psycopg2==2.9.10
